--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Package manager files
-node_modules
-npm-debug.log
-yarn-error.log
+#node_modules
+#npm-debug.log
+#yarn-error.log
 
 # OSX
 .DS_Store
 
 # Build files
-lib
+# lib
 
 # Test files
 coverage
