--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "react-chat-widget",
-  "version": "3.0.1",
+  "name": "ct43",
+  "version": "3.0.2",
   "description": "Chat web widget for React apps",
   "main": "lib/index.js",
-  "repository": "git@github.com:Wolox/react-chat-widget.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Wolox/react-chat-widget.git"
+  },
   "author": "Martín Callegari <martin.callegari@wolox.com.ar>",
   "license": "MIT",
   "types": "./lib/index.d.ts",
@@ -89,7 +92,8 @@
   },
   "peerDependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "eslint": ">= 3"
   },
   "jest": {
     "verbose": true,
@@ -110,5 +114,9 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/mocks/fileMock.js",
       "\\.(css|scss)$": "<rootDir>/mocks/styleMock.js"
     }
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Wolox/react-chat-widget/issues"
+  },
+  "homepage": "https://github.com/Wolox/react-chat-widget#readme"
 }
